Fixed alignment of footer

--- a/src/app/pages/certificates/certificates.page.scss
+++ b/src/app/pages/certificates/certificates.page.scss
@@ -1,6 +1,8 @@
 .home {
     margin: auto;
     text-align: center;
+    display: flex;
+    width: 100%;
 }
 #muStacked {
     width: 25vw;
