--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -11,6 +11,14 @@
 }
 .introCardsWrapper {
     display: flex;
+    padding: 20px;
+    width: 75%;
+    margin: auto;
+    text-align: center;
+}
+.developer {
+    width: 25%;
+    margin: 15px;
 }
 .footer{
     background-color: #8F8884;
