--- a/src/app/pages/minors/minors.page.scss
+++ b/src/app/pages/minors/minors.page.scss
@@ -2,7 +2,15 @@
     margin: auto;
     text-align: center;
     margin-top: 25px;
+    display: flex;
+    width: 100%;
 }
+// .card {
+//     // border: 2px solid red;
+//     display: flex;
+//     margin: auto;
+//     text-align: center;
+// }
 #muStacked {
     width: 25vw;
 }
